--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Flask==1.1.2
 Flask-Compress==1.9.0
 fsspec==0.8.7
 future==0.18.2
-gunicorn==20.1.0
+gunicorn
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
