--- a/requirements.txt
+++ b/requirements.txt
@@ -14,23 +14,24 @@ dash-html-components==1.1.2
 dash-renderer==1.9.0
 dash-table==4.11.2
 Flask==1.1.2
+Flask-Caching==1.10.1
 Flask-Compress==1.9.0
 fsspec==0.8.7
 future==0.18.2
-gunicorn
+gunicorn==20.1.0
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 MarkupSafe==1.1.1
 multidict==5.1.0
-numpy==1.19.5
-pandas==1.1.5
+numpy==1.20.2
+pandas==1.2.3
 plotly==4.14.3
 python-dateutil==2.8.1
 pytz==2021.1
 retrying==1.3.3
-s3fs==0.5.1
+s3fs==0.5.2
 s3transfer==0.3.6
 six==1.15.0
 typing-extensions==3.7.4.3
