--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Brotli==1.0.9
 chardet==4.0.0
 click==7.1.2
 dash==1.19.0
+dash-bootstrap-components==0.12.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash-renderer==1.9.0
